configure_file(
  input: 'clevis.in',
  output: 'clevis',
  install_dir: join_paths(initramfs_scripts_dir, 'local-bottom'),
  configuration: initramfs_data,
)
configure_file(
  input: 'clevis-zfs.in',
  output: 'clevis-zfs',
  install_dir: join_paths(initramfs_scripts_dir, 'local-bottom'),
  configuration: initramfs_data,
)
